Name: pipes-attoparsec
Version: 0.0.2
License: BSD3
License-file: LICENSE
Copyright: Copyright (c) Paolo Capriotti 2012-2012,
                         Renzo Carbonara 2012-
Author: Paolo Capriotti, Renzo Carbonara
Maintainer: renzocarbonaraλgmail.com
Stability: Experimental
tested-with: GHC == 7.4.1
Homepage: https://github.com/k0001/pipes-attoparsec
Bug-reports: https://github.com/k0001/pipes-attoparsec
Category: Text, Pipes, Parser
Build-type: Simple
Cabal-version: >=1.8
Synopsis: Utilities to convert an Attoparsec parser into a pipe Pipe.
Description:
  Utilities to convert an Attoparsec 'Data.Attoparsec.Types.Parser' into
  a 'Control.Proxy.Synonym.Pipe'. See
  "Control.Proxy.Attoparsec.Tutorial" for an extensive introduction with
  examples.

Source-Repository head
    Type: git
    Location: git://github.com/k0001/pipes-extra.git

Library
  Exposed-modules: Control.Proxy.Attoparsec
                   Control.Proxy.Attoparsec.Control
                   Control.Proxy.Attoparsec.Tutorial
                   Control.Proxy.Attoparsec.Types
  Build-depends:
    base (== 4.*),
    pipes (== 3.0.*),
    attoparsec (== 0.10.*),
    bytestring (== 0.9.*),
    text (== 0.11.*)
  ghc-options:
    -Wall -threaded -rtsopts -fno-warn-missing-signatures

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  ghc-options:
    -Wall -threaded -rtsopts -fno-warn-missing-signatures

  build-depends:
    base (== 4.*),
    pipes (== 3.0.*),
    attoparsec (== 0.10.*),
    text (== 0.11.*),
    pipes-attoparsec,
    QuickCheck (== 2.5.*),
    HUnit (== 1.2.*),
    test-framework (== 0.6.*),
    test-framework-quickcheck2 (== 0.2.*),
    test-framework-hunit (== 0.2.*)
