Name: pipes-attoparsec
Version: 0.1.0
License: BSD3
License-file: LICENSE
Copyright: Copyright (c) Paolo Capriotti 2012-2012,
                         Renzo Carbonara 2012-
Author: Paolo Capriotti, Renzo Carbonara
Maintainer: renzocarbonaraλgmail.com
Stability: Experimental
tested-with: GHC ==7.4.1, GHC ==7.6.1
Homepage: https://github.com/k0001/pipes-attoparsec
Bug-reports: https://github.com/k0001/pipes-attoparsec
Category: Text, Pipes, Parser
Build-type: Simple
Cabal-version: >=1.8
Synopsis: Utilities to convert an Attoparsec parser into a pipe Pipe.
Description:
  Utilities to convert an Attoparsec 'Data.Attoparsec.Types.Parser' into
  a 'Control.Proxy.Synonym.Pipe'.
  .
  See "Control.Proxy.Attoparsec.Tutorial" for an extensive introduction with
  examples.
  .
  Version 0.1.* is not backwards compatible with previous versions.

Source-Repository head
    Type: git
    Location: git://github.com/k0001/pipes-attoparsec.git

Library
  Hs-source-dirs:  src
  Exposed-modules: Control.Proxy.Attoparsec
                   Control.Proxy.Attoparsec.Control
                   Control.Proxy.Attoparsec.Tutorial
                   Control.Proxy.Attoparsec.Types
  Build-depends:
    base (==4.*),
    pipes (>=3.0),
    attoparsec (>=0.10),
    bytestring,
    text

  ghc-options:
    -Wall -fno-warn-missing-signatures

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  ghc-options:
    -Wall -rtsopts -fno-warn-missing-signatures

  build-depends:
    base (== 4.*),
    pipes (>= 3.0),
    attoparsec (>= 0.10),
    text,
    pipes-attoparsec,
    QuickCheck (== 2.*),
    HUnit (== 1.*),
    test-framework (>= 0.6),
    test-framework-quickcheck2 (>= 0.2),
    test-framework-hunit (>= 0.2)
