name: pipes-attoparsec
version: 0.1.0.1
license: BSD3
license-file: LICENSE
copyright: Copyright (c) Paolo Capriotti 2012-2012,
                         Renzo Carbonara 2012-2013
author: Paolo Capriotti, Renzo Carbonara
maintainer: renzocarbonaraλgmail.com
stability: Experimental
tested-with: GHC ==7.4.1, GHC ==7.6.1
homepage: https://github.com/k0001/pipes-attoparsec
bug-reports: https://github.com/k0001/pipes-attoparsec
category: Pipes, Parser
build-type: Simple
cabal-version: >=1.8
synopsis: Attoparsec and Pipes integration.
description:
  Utilities to integrate @attoparsec@ 'Data.Attoparsec.Types.Parser'
  and a @pipes@ 'Control.Proxy.Class.Proxy'.
  .
  See "Control.Proxy.Attoparsec.Tutorial" for an extensive introduction with
  examples.
  .
  Version 0.1.* is not backwards compatible with previous versions.
extra-source-files:
  README.md

source-repository head
    type: git
    location: git://github.com/k0001/pipes-attoparsec.git

library
  hs-source-dirs:  src
  exposed-modules: Control.Proxy.Attoparsec
                   Control.Proxy.Attoparsec.Internal
  build-depends:
    base (==4.*),
    mmorph (>=1.0),
    pipes (>=3.2.0),
    pipes-parse (>=1.0 && <=1.1),
    attoparsec (>=0.10),
    bytestring,
    text,
    transformers (>=0.2 && <=0.4)

  ghc-options: -Wall

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  other-modules:  Test.Attoparsec
                  Test.Tutorial
  ghc-options: -Wall -rtsopts -fno-warn-missing-signatures

  build-depends:
    base (== 4.*),
    mmorph (>= 1.0),
    pipes (>= 3.2.0),
    attoparsec (>= 0.10),
    text,
    pipes-attoparsec,
    QuickCheck (== 2.*),
    HUnit (== 1.*),
    test-framework (>= 0.6),
    test-framework-quickcheck2 (>= 0.2),
    test-framework-hunit (>= 0.2)

